# stuff-tree-test-task

./: .env.example  README.md  docker-compose.yml
client/: .prettierrc.json  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json
client/src/: App.tsx  index.tsx
client/src/common/clients/: http.tsx
client/src/components/: index.ts
client/src/components/create-form/: index.tsx
client/src/components/employees/: index.tsx  type.ts
server/: Dockerfile  pyproject.toml
server/app/: __init__.py  main.py
server/app/api/tree/: __init__.py  router.py
server/app/api/user/: __init__.py  router.py
server/app/common/config/: __init__.py  settings.py
server/app/common/database/: __init__.py  postgresql_connector.py  postgresql_service.py
server/app/common/models/: user.py
